added animation to each answer result and final results

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
             <button id="start">Start</button>  
           </div>
         </div>
+      <!-- timer div -->
       <div class="absolute2"></div>
      </div>
-
+     <!-- jeopardy theme song -->
      <audio id="myAudio">
         <source src="assets/images/Jeopardy-theme-song.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
       </audio>
 
-    <!-- Scripts -->
+    <!-- javascript file -->
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 
 </body>
