fixed media queries

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- load loca styles -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- load reset & local styles -->
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- load google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Six+Caps&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Baloo+Paaji&display=swap" rel="stylesheet">
@@ -15,6 +16,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
     <!-- load jQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- load local javascript file -->
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
     <title>Javascript Jeopardy</title>
 </head>
 
@@ -34,9 +37,6 @@
      <audio id="myAudio">
         <source src="assets/images/Jeopardy-theme-song.mp3" type="audio/mp3">
       </audio>
-
-    <!-- javascript file -->
-    <script type="text/javascript" src="assets/javascript/game.js"></script>
 
 </body>
 
